[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = "0.24.2"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
priority-queue = "1.3.2"
regex = "1.10.2"
